<resources>
    <string name="app_name" translatable="false">Hosted In</string>
    <string name="hello_blank_fragment">Hello, welcome to Hosted In!</string>
    <string name="title_activity_host_main">HostMainActivity</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="accommodation_publishing_header"><![CDATA[<b><font color="#5280DB">Hi, </font></b>let\'s prepare<br>"your publication!]]></string>
    <string name="accommodation_booking_header"><![CDATA[<b>¡Let\'s prepare your<br><font color="#5280DB">booking!</font></b>]]></string>
    <string name="last_step_publishing_header"><![CDATA[<b><font color="#5280DB">Last </font></b>step!]]></string>
    <string name="per_night_tag">per night</string>
    <string name="accommodation_edition_header">Hi, select the accommodation\'s section you want to edit.</string>
    <string name="delete_account">Delete account</string>
    <string name="irreversible_action">This is an irreversible action</string>
    <string name="irreversible_action_description">Once you delete your account there is no way to recover it.\nIf you are sure you want to do this, enter your current password to confirm the deletion of your account.</string>
    <string name="hint_confirm_password">Confirm your password</string>
    <string name="wrong_password">Wrong password</string>
    <string name="enter_current_password">You must enter your current password</string>
    <string name="account_deleted_successfully">Account deleted successfully</string>
    <string name="my_profile">My Profile</string>
    <string name="full_name">FullName</string>
    <string name="my_account">My Account</string>
    <string name="change_password">Change password</string>
    <string name="log_out">Log out</string>
    <string name="danger_zone">Danger zone</string>
    <string name="current_password">Current password</string>
    <string name="passwords_dont_match">Passwords do not match</string>
    <string name="did_forget_your_password">Did you forget your password?</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="new_passwords_dont_match">Passwords do not match</string>
    <string name="save_new_password">Save new password</string>
    <string name="password_rules">Minimum 8 characters, one lowercase letter, one uppercase letter, a special character and one number</string>
    <string name="password_cannot_be_the_same">The new password cannot be the same as the old one</string>
    <string name="user_is_null">User comes null</string>
    <string name="edit_profile_photo_description">Edit photo</string>
    <string name="edit_profile">Edit profile</string>
    <string name="personal_data">Personal information</string>
    <string name="birthdate">Birthdate</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="about_user">About me</string>
    <string name="occupation">Occupation</string>
    <string name="residence">Where do you live?</string>
    <string name="error_processing_image">Error processing image</string>
    <string name="iInformation_updated_successfully">Information updated successfully</string>
    <string name="age_restriction">You must be of legal age (18)</string>
    <string name="profile_photo_size_restriction">The image must be less than or equal to %dMB</string>
    <string name="must_enter_full_name">You must enter your full name</string>
    <string name="invalid_full_name">Invalid full name</string>
    <string name="must_enter_birthdate">You must enter your birthdate</string>
    <string name="invalid_date_format">The date format is not valid</string>
    <string name="must_enter_phone_number">You must enter your phone number</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="invalid_occupation">Invalid occupation</string>
    <string name="invalid_residence">Invalid residence</string>
    <string name="accommodation_created_successfully">Accommodation created successfully</string>
    <string name="accommodation_type_header">What type of accommodation best  \ndescribes your publication?</string>
    <string name="choose_accommodation_type_message">Select an accommodation type</string>
    <string name="house">House</string>
    <string name="apartment">Apartment</string>
    <string name="cabin">Cabin</string>
    <string name="camp">Camp</string>
    <string name="camper">Camper</string>
    <string name="ship">Ship</string>
    <string name="accommodation_location_header">Where is your accommodation \nlocated?</string>
    <string name="accommodation_location_description">Detail the address of your accommodation</string>
    <string name="location">Location</string>
    <string name="location_content_description">Address of your accommodation</string>
    <string name="choose_location_instruction">You can adjust your location by holding the red marker and dragging it to where your accommodation is located</string>
    <string name="choose_accommodation_location_message">Select the location of your accommodation</string>
    <string name="accommodations_basics_header">Let\'s add some basic information about\n your accommodation</string>
    <string name="guests">Guests</string>
    <string name="rooms">Rooms</string>
    <string name="beds">Beds</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="max_basics_quantity">The maximum quantity is %d</string>
    <string name="must_adjust_guests_number">You must adjust the number of Guests</string>
    <string name="must_adjust_rooms_number">You must adjust the number of Rooms</string>
    <string name="must_adjust_beds_number">You must adjust the number of Beds</string>
    <string name="must_adjust_bathrooms_number">You must adjust the number of Bathrooms</string>
    <string name="accommodation_services_header">Tell guests about all the services\nyour accommodation offers</string>
    <string name="internet">Internet</string>
    <string name="tv">TV</string>
    <string name="kitchen">Kitchen</string>
    <string name="washing_machine">Washing Machine</string>
    <string name="parking">Parking</string>
    <string name="air_conditioning">Air Conditioning</string>
    <string name="pool">Pool</string>
    <string name="garden">Garden</string>
    <string name="light">Light</string>
    <string name="water">Water</string>
    <string name="choose_at_least_one_service_message">Select at least one service</string>
    <string name="accommodation_multimedia_header">Show your guests the \naccommodation</string>
    <string name="time_video_restriction">The video must be less than 1 minute long</string>
    <string name="size_video_restriction">The video must be less than 10 MB</string>
    <string name="choose_multimedia_instruction">Select 3 photos and 1 video of your accommodation</string>
    <string name="error_procesing_video">Error processing the video</string>
    <string name="accommodation_information_header">Give your accommodation a \ntitle and description</string>
    <string name="hint_title">Title</string>
    <string name="title_content_description">Title of your accommodation publication</string>
    <string name="hint_description">Description</string>
    <string name="description_content_description">Description of your accommodation</string>
    <string name="add_some_rules">Do you want to add any rules for your accommodation?</string>
    <string name="rules">Rules</string>
    <string name="rules_content_description">Rules guests must follow at your accommodation</string>
    <string name="set_night_price_instruction">Now, set the price per night for\nyour accommodation</string>
    <string name="money_symbol">$</string>
    <string name="hint_price">Price</string>
    <string name="bottom_nav_menu_explore">Explore</string>
    <string name="bottom_nav_menu_bookings">Bookings</string>
    <string name="bottom_nav_menu_statics">Statistics</string>
    <string name="bottom_nav_menu_host_bookings">Bookings</string>
    <string name="bottom_nav_menu_host_accommodations">Accommodations</string>
    <string name="bottom_nav_menu_host_statics">Statistics</string>
    <string name="owned_acco_header">So awesome to see you again, these are your accommodations, what you wanna do?</string>
    <string name="no_owned_acco">You don´t have accommodation yet, publish one.</string>
    <string name="creat_publication">Create publication</string>
</resources>