<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/explore"
        android:title="@string/bottom_nav_menu_explore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/search_icon"/>
    <item
        android:id="@+id/bookings"
        android:title="@string/bottom_nav_menu_bookings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/airplane_icon"/>
    <item
        android:id="@+id/statistics"
        android:title="@string/bottom_nav_menu_statics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/statistics_icon"/>
</menu>