<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bookings_host"
        android:title="@string/bottom_nav_menu_host_bookings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/airplane_icon"/>
    <item
        android:id="@+id/publications"
        android:title="@string/bottom_nav_menu_host_accommodations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/promotion_icon"/>
    <item
        android:id="@+id/statistics_host"
        android:title="@string/bottom_nav_menu_host_statics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/statistics_icon"/>
</menu>